# cpp-metrics

./: Benchmark.cpp  CMakeLists.txt  README.md  ShowSize.cpp  elapsed.hpp
.github/workflows/: cmake.yml
include/Metrics/: Gauge.hpp  Histogram.hpp  IMetric.hpp  IReservoir.hpp  Kurtosis.hpp  LinearRegression.hpp  MinMax.hpp  MinMeanMax.hpp  Registry.hpp  SamplingReservoir.hpp  SlidingWindowReservoir.hpp  Snapshot.hpp  Statistics.hpp  Variance.hpp
tests/: CMakeLists.txt  TestDeadlock.cpp  TestGauge.cpp  TestHistogram.cpp  TestKurtosis.cpp  TestLinearRegression.cpp  TestMinMax.cpp  TestMinMeanMax.cpp  TestSamplingReservoir.cpp  TestSlidingWindowReservoir.cpp  TestSnapshot.cpp  TestStatistics.cpp  TestVariance.cpp
